--- a/index.html
+++ b/index.html
@@ -34,17 +34,22 @@
             </div>
             <div class="col-sm-9">
                 <div class="tab">
-                    </div>
-                <div class="contentTabs courseDivs">
-                    
+                </div>
+                <div class="contentTabs courseDivs">   
                 </div>
             </div>
         </div>
         <div id="monthly" class="tabcontent1">
-            <div class="custom-select" style="width:200px;" id="monthGrade">
+            <div class="col-sm-3 custom-select" style="width:200px;" id="monthGrade">
                 <select>
                     <option value="0">Select</option>
                 </select>
+            </div>
+            <div class="col-sm-10">
+                <div class="tabMonth">
+                </div>
+                <div class="contentTabsMonth courseDivsMonths">   
+                </div>
             </div>
             <div id="monthlyDiv"><div class="col-sm-12 monthEachDiv"><div class="container col-sm-1 text-center"><input type="radio" name="radio"><span class="checkmark"></span></div><div class="col-sm-3"><span class="bigFont">1 Month</span><br><span>Money Refund Same Day*</span></div><div class="col-sm-4"><span class="bigFont yellowFont"> ₹ 1620</span> <span class="yellowFont"> <strike> ₹ 1800</strike></span><br><span id="discount">10% OFF</span></div><div class="col-sm-4"><span class="bigFont"> ₹ 324 per session</span><br><span>5 Sessions</span></div></div><div class="col-sm-12 monthEachDiv"><div class="container col-sm-1 text-center "><input type="radio"  name="radio"><span class="checkmark"></span></div><div class="col-sm-3"><span class="bigFont">2 Month</span><br><span>Money Refund Same Day*</span></div><div class="col-sm-4"><span class="bigFont yellowFont"> ₹ 3060</span> <span class="yellowFont"> <strike> ₹ 3600</strike></span><br><span id="discount">15% OFF</span></div><div class="col-sm-4"><span class="bigFont"> ₹ 306 per session</span><br><span>10 Sessions</span></div></div><div class="col-sm-12 monthEachDiv"><div class="container col-sm-1 text-center "><input type="radio"  name="radio"><span class="checkmark"></span></div><div class="col-sm-3"><span class="bigFont">3 Month</span><br><span>Higher Score Guaranteed**</span></div><div class="col-sm-4"><span class="bigFont yellowFont"> ₹ 5760</span> <span class="yellowFont"> <strike> ₹ 7200</strike></span><br><span id="discount">20% OFF</span></div><div class="col-sm-4"><span class="bigFont"> ₹ 288 per session</span><br><span>20 Sessions</span></div></div><div class="col-sm-12 monthEachDiv"><div class="container col-sm-1 text-center "><input type="radio" name="radio"><span class="checkmark"></span></div><div class="col-sm-3"><span class="bigFont">6 Month</span><br><span>Higher Score Guaranteed**</span></div><div class="col-sm-4"><span class="bigFont yellowFont"> ₹ 12150</span> <span class="yellowFont"> <strike> ₹ 16200</strike></span><br><span id="discount">25% OFF</span></div><div class="col-sm-4"><span class="bigFont"> ₹ 270 per session</span><br><span>45 Sessions</span></div></div></div>
             <div class="col-sm-12 monthFooter">
